# org-graphql

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  flake.nix  org-backend.cabal  org-graphql.cabal  plan.md  renovate.json  shell.nix  stack.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
app/: Main.hs
src/: OrgBackend.hs  OrgGraphql.hs
src/Api/: GraphQL.hs  Http.hs  Inputs.hs
src/Org/: Parser.hs  Types.hs
test/: Spec.hs
test/Api/: HttpSpec.hs
test/Org/: ParserSpec.hs
test/fixtures/: .hidden.org  invalid.org  sample.org  tagged.org
test/fixtures/subdir/: child.org
