cabal-version:      2.4
name:               org-backend
version:            0.1.0.0
synopsis:           Org-mode GraphQL backend
license:            NONE
build-type:         Simple

library
  exposed-modules:  OrgBackend,
                    Api.GraphQL
  hs-source-dirs:   src
  build-depends:    base >=4.18 && <5,
                    bytestring >=0.12 && <0.13,
                    morpheus-graphql-server >=0.28 && <0.29,
                    text >=2.1 && <2.2
  default-language: Haskell2010

executable org-backend-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base >=4.18 && <5,
                    org-backend
  default-language: Haskell2010

test-suite org-backend-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base >=4.18 && <5,
                    bytestring >=0.12 && <0.13,
                    hspec >=2.11 && <3,
                    org-backend
  default-language: Haskell2010
