cabal-version:      2.4
name:               org-graphql
version:            0.1.0.0
synopsis:           Org-mode GraphQL backend
license:            NONE
build-type:         Simple

library
  exposed-modules:  OrgGraphql,
                    Api.GraphQL,
                    Api.Http,
                    Api.Inputs,
                    Org.Parser,
                    Org.Types
  hs-source-dirs:   src
  build-depends:    base >=4.18 && <5,
                    aeson >=2.2 && <2.3,
                    attoparsec >=0.14 && <0.15,
                    bytestring >=0.12 && <0.13,
                    containers >=0.6 && <0.8,
                    directory >=1.3 && <1.4,
                    filepath >=1.4 && <1.5,
                    morpheus-graphql-server >=0.28 && <0.29,
                    text >=2.1 && <2.2
  default-language: Haskell2010

executable org-graphql-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base >=4.18 && <5,
                    bytestring >=0.12 && <0.13,
                    http-types >=0.12 && <0.13,
                    text >=2.1 && <2.2,
                    wai >=3.2 && <3.3,
                    warp >=3.3 && <3.5,
                    org-graphql
  default-language: Haskell2010

test-suite org-graphql-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Api.HttpSpec,
                    Org.ParserSpec
  build-depends:    base >=4.18 && <5,
                    aeson >=2.2 && <2.3,
                    bytestring >=0.12 && <0.13,
                    directory >=1.3 && <1.4,
                    containers >=0.6 && <0.8,
                    hspec >=2.11 && <3,
                    time >=1.12 && <1.13,
                    org-graphql
  default-language: Haskell2010
